--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,9 @@ footer {
   background: #1a1030;
   color: #aaa;
 }
+
+.gradient-text {
+  background: linear-gradient(to right, #00ffff, #ff00ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
